fix(Align): fix input to button alignment

--- a/packages/components/src/components/Chat/Chat.module.scss
+++ b/packages/components/src/components/Chat/Chat.module.scss
@@ -31,3 +31,12 @@
     }
   }
 }
+
+@media (max-width: 550px) {
+  .chat .controls {
+    flex-wrap: wrap;
+    .accentButton {
+      width: 100%;
+    }
+  }
+}
